--- a/source/order.html
+++ b/source/order.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Мишка - интернет-магазин игрушек ручной работы</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -10,14 +11,18 @@
 <body class="page-body">
   <header class="page-header inner-header">
     <div class="page-hader__wrapper">
-      <div class="page-header__logo">
+      <div class="page-header__top">
         <a href="index.html" class="logo">
-          <img src="img/mishka-logo-mobile.svg" alt="Логотип интернет-магазина игрушек ручной работы - Мишка" width="86" height="35">
+          <picture>
+            <source media="(min-width: 1150px)" srcset="img/mishka-logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/mishka-logo-tablet.svg">
+            <img class="logo__img" src="img/mishka-logo-mobile.svg" alt="Логотип интернет-магазина игрушек ручной работы - Мишка" width="86" height="35">
+          </picture>
         </a>
+        <button class="page-header__toggle page-header__toggle--nojs">Открыть меню</button>
       </div>
 
-      <nav class="page-header__nav site-nav">
-        <button class="site-nav__toggle visually-hidden">Открыть меню</button>
+      <nav class="page-header__nav site-nav site-nav page-header__menu--show">
         <ul class="site-nav__list">
           <li class="site-nav__item">
             <a class="site-nav__link" href="catalog.html">Каталог товаров</a>
@@ -28,16 +33,26 @@
         </ul>
       </nav>
 
-      <div class="page-header__search site-search">
+      <div class="page-header__search site-search page-header__menu--show">
         <input class="site-search__field" type="search" id="site-search">
-        <label class="site-search__label"for="site-search">Поиск по сайту</label>
+        <label class="site-search__label" for="site-search">
+          <svg class="site-search__icon" width="18" height="18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="m17.693 16.057-3.477-3.477c1.023-1.33 1.534-2.966 1.534-4.705C15.75 3.477 12.273 0 7.875 0S0 3.477 0 7.875s3.477 7.875 7.875 7.875c1.739 0 3.375-.614 4.704-1.534l3.478 3.477c.204.205.409.307.818.307.614 0 1.125-.511 1.125-1.125 0-.204-.102-.511-.307-.818ZM2.25 7.875c0-3.068 2.557-5.625 5.625-5.625S13.5 4.807 13.5 7.875 10.943 13.5 7.875 13.5 2.25 10.943 2.25 7.875Z" fill="#000"/>
+          </svg>
+          <span>Поиск по сайту</span>
+        </label>
       </div>
 
-      <div class="page-header__cart cart">
-        <a class="cart__link" href="#">Корзина: пока пуста</a>
+      <div class="page-header__cart cart page-header__menu--show">
+        <a class="cart__link" href="#">
+          <svg class="cart__icon" width="21" height="18" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M20.188 6.857h-3.55L13.188.381C12.985 0 12.58-.095 12.174.095s-.507.572-.304.953l3.145 5.81H5.783l3.145-5.81c.202-.381 0-.762-.305-.953-.406-.19-.811 0-1.014.286l-3.45 6.476H.812c-.406 0-.812.286-.812.762 0 .381.304.762.812.762h.202l.914 2.857c-.203.095-.305.286-.305.572 0 .38.305.666.71.666L4.058 18h12.884l1.725-5.524c.405 0 .71-.286.71-.667 0-.19-.102-.476-.304-.57l.912-2.858h.203c.406 0 .812-.286.812-.762 0-.476-.406-.762-.812-.762Zm-4.565 9.62H5.073L3.854 12.38h13.087l-1.319 4.095Zm1.623-5.525H3.348l-.812-2.666h15.522l-.812 2.666Z" fill="#000"/>
+          </svg>
+          <span>Корзина: пока пуста</span>
+        </a>
       </div>
 
-      <nav class="page-header__extra-nav extra-nav">
+      <nav class="page-header__extra-nav extra-nav page-header__menu--show">
         <ul class="extra-nav__list">
           <li class="extra-nav__item">
             <a class="extra-nav__link" href="#">Новые поступления</a>
@@ -48,7 +63,7 @@
         </ul>
       </nav>
 
-      <p class="page-header__promo-text">Бесплатная доставка по России</p>
+      <p class="page-header__promo-text page-header__menu--show">Бесплатная доставка по России</p>
     </div>
   </header>
 
@@ -63,37 +78,37 @@
           <p class="order-form__promo-text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
         </header>
         <div class="order-form__group">
-          <fieldset class="form-group form-group">
+          <fieldset class="form-group form-group__radio">
             <legend class="form-group__title">Тип</legend>
 
-            <input class="form-group__radio" type="radio" name="type" id="interior-accessories" checked>
-            <label class="form-group__label" for="interior-accessories">Аксессуар для интерьера</label>
+            <input class="form-group__radio visually-hidden" type="radio" name="type" id="interior-accessories" checked>
+            <label class="form-group__label label-radio" for="interior-accessories">Аксессуар для интерьера</label>
 
-            <input class="form-group__radio" type="radio" name="type" id="toy">
-            <label class="form-group__label" for="toy">Детская игрушка</label>
+            <input class="form-group__radio visually-hidden" type="radio" name="type" id="toy">
+            <label class="form-group__label label-radio" for="toy">Детская игрушка</label>
           </fieldset>
         </div>
         <div class="order-form__group">
-          <fieldset class="form-group">
-            <legend class="form-group__title">Тип</legend>
+          <fieldset class="form-group form-group__checkbox">
+            <legend class="form-group__title">Цвет</legend>
 
-            <input class="form-group__checkbox" type="checkbox" name="white" id="white" checked>
-            <label class="form-group__label" for="white">Белый</label>
+            <input class="form-group__checkbox visually-hidden" type="checkbox" name="white" id="white" checked>
+            <label class="form-group__label label-checkbox" for="white">Белый</label>
 
-            <input class="form-group__checkbox" type="checkbox" name="grey" id="grey" checked>
-            <label class="form-group__label" for="grey">Серый</label>
+            <input class="form-group__checkbox visually-hidden" type="checkbox" name="grey" id="grey" checked>
+            <label class="form-group__label label-checkbox" for="grey">Серый</label>
 
-            <input class="form-group__checkbox" type="checkbox" name="tiffany" id="tiffany">
-            <label class="form-group__label" for="tiffany">«Тиффани»</label>
+            <input class="form-group__checkbox visually-hidden" type="checkbox" name="tiffany" id="tiffany">
+            <label class="form-group__label label-checkbox" for="tiffany">«Тиффани»</label>
 
-            <input class="form-group__checkbox" type="checkbox" name="black" id="black">
-            <label class="form-group__label" for="black">Черный</label>
+            <input class="form-group__checkbox visually-hidden" type="checkbox" name="black" id="black">
+            <label class="form-group__label label-checkbox" for="black">Черный</label>
 
-            <input class="form-group__checkbox" type="checkbox" name="pink" id="pink">
-            <label class="form-group__label" for="pink">Розовый</label>
+            <input class="form-group__checkbox visually-hidden" type="checkbox" name="pink" id="pink">
+            <label class="form-group__label label-checkbox" for="pink">Розовый</label>
 
-            <input class="form-group__checkbox" type="checkbox" name="orange" id="orange">
-            <label class="form-group__label" for="orange">Оранжевый</label>
+            <input class="form-group__checkbox visually-hidden" type="checkbox" name="orange" id="orange">
+            <label class="form-group__label label-checkbox" for="orange">Оранжевый</label>
           </fieldset>
         </div>
 
@@ -119,16 +134,16 @@
         </div>
 
         <div class="order-form__group">
-          <fieldset class="form-group">
+          <fieldset class="form-group form-group--contacts">
             <legend class="form-group__title">Тел</legend>
 
-            <input class="form-group__text-field" type="tel" name="tel" id="tel" placeholder="+7 ХХХ ХХХ ХХ ХХ*" minlength="11" maxlength="20" required>
+            <input class="form-group__text-field form-group__text-field--contacts form-group__text-field--tel" type="tel" name="tel" id="tel" placeholder="+7 ХХХ ХХХ ХХ ХХ*" minlength="11" maxlength="20" required>
           </fieldset>
 
-          <fieldset class="form-group">
+          <fieldset class="form-group form-group--contacts">
             <legend class="form-group__title">E-mail</legend>
 
-            <input class="form-group__text-field" type="email" name="email" id="email" placeholder="Ваш Email*" required>
+            <input class="form-group__text-field form-group__text-field--contacts form-group__text-field--email" type="email" name="email" id="email" placeholder="Ваш Email*" required>
           </fieldset>
         </div>
 
@@ -189,5 +204,6 @@
     </div>
   </footer>
 
+  <script src="js/menu.js"></script>
 </body>
 </html>
