Заершит адаптив по Pixel Perfect

--- a/source/order.html
+++ b/source/order.html
@@ -88,7 +88,7 @@
             <label class="form-group__label label-radio" for="toy">Детская игрушка</label>
           </fieldset>
         </div>
-        <div class="order-form__group">
+        <div class="order-form__group order-form__group--checkbox">
           <fieldset class="form-group form-group__checkbox">
             <legend class="form-group__title">Цвет</legend>
 
@@ -148,10 +148,10 @@
         </div>
 
         <div class="order-form__group">
-          <fieldset class="form-group">
+          <fieldset class="form-group form-group--message">
             <legend class="form-group__title">Доп</legend>
 
-            <textarea class="form-group__textarea" name="message" id="message" cols="20" rows="6" placeholder="Опишите все ваши пожелания к заказу"></textarea>
+            <textarea class="form-group__textarea" name="message" id="message" cols="20" rows="5" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           </fieldset>
         </div>
 
