--- a/source/index.html
+++ b/source/index.html
@@ -132,7 +132,7 @@
 
       <div class="reviews__list">
           <blockquote class="reviews__item">
-            <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+            <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как<br> у популярных инстамамочек.<br> В отчаянии, я накупила<br> аксессуаров и игрушек в Мишке,<br> и мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
             <p class="reviews__author">
               <span class="reviews__author-name">Анастасия Красильникова</span>
               <cite class="reviews__author-nickname">@misssssiskras</cite>
@@ -173,7 +173,7 @@
         </div>
         <div class="contacts__item">
           <dt class="contacts__field-name">адрес:</dt>
-          <dd class="contacts__field-value">г. Санкт-Петербург ул.Большая Конюшенная д. 19/8, офис 101</dd>
+          <dd class="contacts__field-value">г. Санкт-Петербург<br> ул. Большая Конюшенная д. 19/8, офис 101</dd>
         </div>
       </dl>
       <div class="contacts__map">
