--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,7 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Мишка - интернет-магазин игрушек ручной работы</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css" />
+  <link rel="icon" href="favicon.ico" />
+  <link rel="icon" href="img/favicons/32.svg" type="image/svg+xml" />
+  <link rel="apple-touch-icon" href="img/favicons/180.png" />
+  <link rel="manifest" href="manifest.webmanifest" />
 </head>
 
 <body class="page-body">
@@ -226,6 +230,6 @@
     <button class="modal-order__button">Заказать</button>
   </section>
 
-  <script src="js/menu.js"></script>
+  <script src="js/menu.min.js"></script>
 </body>
 </html>
